--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,14 @@ uniffi = ["dep:uniffi"]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 wasm-bindgen = { version = "0.2", optional = true }
-uniffi = { version = "0.25", optional = true }
+uniffi = { version = "0.25", optional = true, features = ["cli"] }
 
 [build-dependencies]
 uniffi_build = "0.25"
 
 [dev-dependencies]
 cbindgen = "0.24"
+
+[[bin]]
+name = "uniffi-bindgen"
+path = "uniffi-bindgen.rs"
