--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,18 +10,20 @@ crate-type = ["rlib", "cdylib"]
 [features]
 default = []
 wasm = ["dep:wasm-bindgen"]
-ohos = []
 uniffi = ["dep:uniffi"]
+ohos_napi = ["dep:napi-ohos", "dep:napi-derive-ohos"]
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 wasm-bindgen = { version = "0.2", optional = true }
 uniffi = { version = "0.25", optional = true, features = ["cli"] }
+napi-ohos = { version = "1", optional = true }
+napi-derive-ohos = { version = "1", optional = true }
 
 [build-dependencies]
 uniffi_build = "0.25"
-ohos_ndk_env = "0.1"
+napi-build-ohos = "1"
 
 [dev-dependencies]
 cbindgen = "0.24"
@@ -29,3 +31,4 @@ cbindgen = "0.24"
 [[bin]]
 name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
+required-features = ["uniffi"]
